modify体系、研究室、试验站

--- a/notice.html
+++ b/notice.html
@@ -74,7 +74,7 @@
 
     <!--Demo script [ DEMONSTRATION ]-->
     <script src="js/demo/nifty-demo.min.js"></script>
-
+    <script src="js/atits_pc_js/perrmission.js"></script>
 
     <!--Bootstrap Table Sample [ SAMPLE ]-->
     <script src="js/demo/tables-bs-table.js"></script>
@@ -256,7 +256,7 @@
                                         标题
                                     </label>
                                     <div class="col-sm-6">
-                                        <input  class="form-control input-sm" placeholder="" type="text">
+                                        <input  class="form-control input-sm" placeholder="" type="text" name="title">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -264,7 +264,7 @@
                                         编辑人
                                     </label>
                                     <div class="col-sm-6">
-                                        <input  class="form-control input-sm" value="体系办" disabled =" " type="text">
+                                        <input  class="form-control input-sm" value="体系办" disabled =" " type="text" name="user">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -352,7 +352,7 @@
 
                                         <!--Summernote-->
                                         <!--===================================================-->
-                                        <div id="demo-summernote" >
+                                        <div id="content1" >
                                             <h4><span style="color: rgb(206, 198, 206); font-family: inherit; line-height: 1.1;">请在这写!</span><br></h4><h4><font color="#9c9c94"></font></h4>
                                         </div>
                                         <!--===================================================-->
@@ -363,7 +363,7 @@
                             </div>
                             <div class="panel-footer text-right">
                                 <button class="btn btn-info middle " data-dismiss="modal">退出</button>
-                                <button class="btn btn-primary middle">添加</button>
+                                <button class="btn btn-primary middle" id="submit1" type="submit">添加</button>
                             </div>
                         </form>
                     </div>
@@ -427,7 +427,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="person">
                                     <a href="user.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -437,7 +437,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="system">
                                     <a href="system.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -447,7 +447,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="lab">
                                     <a href="laboratory.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -457,7 +457,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="sta">
                                     <a href="station.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -498,7 +498,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li class="active-link">
+                                <li>
                                     <a href="notice.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
@@ -527,7 +527,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="regulation.html">
+                                    <a href="task.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>工作任务</strong>
@@ -545,7 +545,7 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li>
+                                <li style="display: none" id="test">
                                     <a href="test_manager.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
