--- a/notice.html
+++ b/notice.html
@@ -256,7 +256,7 @@
                                         标题
                                     </label>
                                     <div class="col-sm-6">
-                                        <input  class="form-control input-sm" placeholder="" type="text">
+                                        <input  class="form-control input-sm" placeholder="" type="text" name="title">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -264,7 +264,7 @@
                                         编辑人
                                     </label>
                                     <div class="col-sm-6">
-                                        <input  class="form-control input-sm" value="体系办" disabled =" " type="text">
+                                        <input  class="form-control input-sm" value="体系办" disabled =" " type="text" name="user">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -352,7 +352,7 @@
 
                                         <!--Summernote-->
                                         <!--===================================================-->
-                                        <div id="demo-summernote" >
+                                        <div id="content1" >
                                             <h4><span style="color: rgb(206, 198, 206); font-family: inherit; line-height: 1.1;">请在这写!</span><br></h4><h4><font color="#9c9c94"></font></h4>
                                         </div>
                                         <!--===================================================-->
@@ -363,7 +363,7 @@
                             </div>
                             <div class="panel-footer text-right">
                                 <button class="btn btn-info middle " data-dismiss="modal">退出</button>
-                                <button class="btn btn-primary middle">添加</button>
+                                <button class="btn btn-primary middle" id="submit1" type="submit">添加</button>
                             </div>
                         </form>
                     </div>
