--- a/station.html
+++ b/station.html
@@ -100,7 +100,7 @@
     <script src="js/demo/ui-modals.js"></script>
 
     <link id="theme" href="css/themes/type-a/theme-dark.min.css" rel="stylesheet">
-
+    <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
 </head>
 
 <!--TIPS-->
@@ -372,16 +372,6 @@
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
             <div id="page-title">
                 <h1 class="page-header text-overflow">综合试验站</h1>
-
-                <!--Searchbox-->
-                <div class="searchbox">
-                    <div class="input-group custom-search-form">
-                        <input type="text" class="form-control" placeholder="Search..">
-                        <span class="input-group-btn">
-                                <button class="text-muted" type="button"><i class="demo-pli-magnifi-glass"></i></button>
-                            </span>
-                    </div>
-                </div>
             </div>
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
             <!--End page title-->
@@ -689,7 +679,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li style="display: none" id="sta">
+                                <li class="active" style="display: none" id="sta">
                                     <a href="station.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
