update teststart add and users

--- a/test_manager.html
+++ b/test_manager.html
@@ -593,20 +593,9 @@
                                                 <div class="form-group">
                                                     <label class="col-lg-3 control-label">请您选择外聘专家名单：</label>
                                                     <div class="col-lg-5">
-                                                        <div class="checkbox">
-                                                            <input id="demo-checkbox-21" class="magic-checkbox"
-                                                                   type="checkbox" name="">
-                                                            <label for="demo-checkbox-21">张某某</label>
-                                                            <br>
-                                                            <input id="demo-checkbox-22" class="magic-checkbox"
-                                                                   type="checkbox" name="programs[]">
-                                                            <label for="demo-checkbox-22">李某某</label>
-                                                            <br>
-                                                            <input id="demo-checkbox-23" class="magic-checkbox"
-                                                                   type="checkbox" name="programs[]">
-                                                            <label for="demo-checkbox-23">王某某</label>
-                                                        </div>
+                                                        <ul id="menu2">
 
+                                                        </ul>
                                                     </div>
                                                 </div>
                                             </div>
