--- a/login.html
+++ b/login.html
@@ -33,6 +33,7 @@
 
 
     <script src="js/jquery-2.2.4.min.js"></script>
+
     <script src="js/atits_pc_js/login.js"></script>
 
 
@@ -72,7 +73,7 @@
 
 
 </head>
-<body onLoad="createCode()">
+<body onLoad="createCode();document.getElementById('userName').focus();GetCookie();">
 
         <!--用户名：<input name="userName" type="text" id="userName">-->
         <!--<br>-->
@@ -106,17 +107,17 @@
                             <!--</div>-->
                         <!--</div>-->
                         <form class="form-horizontal">
-                            <div class="form-group">
-                                <label for="demo-is-inputnormal" class="col-sm-3 control-label">用户名：</label>
+                            <div class="form-group user">
+                                <label  class="col-sm-3 control-label">用户名：</label>
                                 <div class="col-sm-8">
-                                     <input type="text" name="userName" id="userName" class="form-control" id="demo-is-inputnormal" placeholder="" >
+                                     <input type="text" name="userName" id="userName"  class="form-control" placeholder="" >
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <label class="col-sm-3 control-label">密 &nbsp;&nbsp; 码：</label>
                                 <div class="col-sm-8">
-                                     <input type="password" name="userName" id="password" class="form-control" placeholder="" >
+                                     <input type="password" name="password" id="password" class="form-control" placeholder="" >
                                 </div>
                             </div>
 
@@ -132,10 +133,12 @@
                             </div>
                         </form>
                             <div class="checkbox pad-btm text-left">
-                                <input id="demo-form-checkbox" class="magic-checkbox" type="checkbox">
-                                <label for="demo-form-checkbox">记住密码</label>
+                                <input  class="magic-checkbox" id="remember-password"  type="checkbox">
+                                <label for="remember-password">记住密码</label>
                             </div>
-                            <button class="btn btn-primary btn-lg btn-block" onClick="validate()" id="login" >登陆</button>
+
+
+                            <button class="btn btn-primary btn-lg btn-block" onClick="checkInCorrect();validate()" id="login" >登陆</button>
                     </div>
 
                     <div class="pad-all">
