update teststart that different role have different Features

--- a/login.html
+++ b/login.html
@@ -31,7 +31,8 @@
     <!--Page Load Progress Bar [ OPTIONAL ]-->
     <link href="plugins/pace/pace.min.css" rel="stylesheet">
 
-
+    <!--===============这个js放在第一位================-->
+    <script src="js/atits_pc_js/ipaddress.js"></script>
     <script src="js/jquery-2.2.4.min.js"></script>
 
     <script src="js/atits_pc_js/login.js"></script>
