--- a/laboratory_detail.html
+++ b/laboratory_detail.html
@@ -47,11 +47,14 @@
 
 		<!--Pace - Page Load Progress Par [OPTIONAL]-->
 		<link href="plugins/pace/pace.min.css" rel="stylesheet">
-
+		<!--===============这个js放在第一位================-->
+		<script src="js/atits_pc_js/ipaddress.js"></script>
 		<script src="plugins/pace/pace.min.js"></script>
 
 		<!--jQuery [ REQUIRED ]-->
 		<script src="js/jquery-2.2.4.min.js"></script>
+		<!--===================这个紧随jQuery==================-->
+		<script src="js/atits_pc_js/permission.js"></script>
 
 		<!--BootstrapJS [ RECOMMENDED ]-->
 		<script src="js/bootstrap.min.js"></script>
