--- a/system.html
+++ b/system.html
@@ -51,13 +51,16 @@
 
     <!--Pace - Page Load Progress Par [OPTIONAL]-->
     <link href="plugins/pace/pace.min.css" rel="stylesheet">
+    <!--===============这个js放在第一位================-->
+    <script src="js/atits_pc_js/ipaddress.js"></script>
     <script src="plugins/pace/pace.min.js"></script>
 
 
     <!--jQuery [ REQUIRED ]-->
     <script src="js/jquery-2.2.4.min.js"></script>
 
-
+    <!--===================这个紧随jQuery==================-->
+    <script src="js/atits_pc_js/permission.js"></script>
     <!--BootstrapJS [ RECOMMENDED ]-->
     <script src="js/bootstrap.min.js"></script>
 
@@ -70,8 +73,6 @@
 
     <!--Demo script [ DEMONSTRATION ]-->
     <script src="js/demo/nifty-demo.min.js"></script>
-
-    <script src="js/atits_pc_js/perrmission.js"></script>
     
     <script src="js/atits_pc_js/system.js"></script>
     
