--- a/test_manager.html
+++ b/test_manager.html
@@ -46,13 +46,16 @@
     <!--Pace - Page Load Progress Par [OPTIONAL]-->
     <link href="plugins/pace/pace.min.css" rel="stylesheet">
 
-
+    <!--===============这个js放在第一位================-->
+    <script src="js/atits_pc_js/ipaddress.js"></script>
     <script src="plugins/pace/pace.min.js"></script>
 
 
     <!--jQuery [ REQUIRED ]-->
     <script src="js/jquery-2.2.4.min.js"></script>
 
+    <!--===================这个紧随jQuery==================-->
+    <script src="js/atits_pc_js/permission.js"></script>
 
     <!--BootstrapJS [ RECOMMENDED ]-->
     <script src="js/bootstrap.min.js"></script>
@@ -67,8 +70,6 @@
     <!--Demo script [ DEMONSTRATION ]-->
     <script src="js/demo/nifty-demo.min.js"></script>
 
-    <!--===================这个在上面==================-->
-    <script src="js/atits_pc_js/perrmission.js"></script>
 
     <!--===================这个在下面==================-->
     <script src="js/atits_pc_js/test_manager.js"></script>
@@ -224,12 +225,7 @@
                                     <div class="tab-pane fade in active" id="demo-tabs-box-1">
 
                                         <div id="kpqd">
-                                            <button class="btn btn-success" data-toggle="modal" id="add"
-                                                    data-target="#demo-lg-modal">
-                                                <i class="demo-pli-plus"></i>添加
-                                            </button>
-                                            <button class="btn btn-danger" id="delete"><i class="demo-pli-cross"></i>删除
-                                            </button>
+
                                         </div>
                                         <table id="demo-custom-toolbar1" class="demo-add-niftycheck" data-toggle="table"
                                                data-toolbar="#kpqd"
