--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
 
 
 </head>
-<body onLoad="createCode();document.getElementById('userName').focus();GetCookie();">
+<body onLoad="createCode();document.getElementById('userName').focus();GetCookie();" >
 
         <!--用户名：<input name="userName" type="text" id="userName">-->
         <!--<br>-->
@@ -118,7 +118,7 @@
                             <div class="form-group">
                                 <label class="col-sm-3 control-label">密 &nbsp;&nbsp; 码：</label>
                                 <div class="col-sm-8">
-                                     <input type="password" name="password" id="password" class="form-control" placeholder="" >
+                                     <input type="password" name="password" id="password"  class="form-control" placeholder="" >
                                 </div>
                             </div>
 
@@ -137,9 +137,7 @@
                                 <input  class="magic-checkbox" id="remember-password"  type="checkbox">
                                 <label for="remember-password">记住密码</label>
                             </div>
-
-
-                            <button class="btn btn-primary btn-lg btn-block" onClick="checkInCorrect();validate()" id="login" >登陆</button>
+                            <button class="btn btn-primary btn-lg btn-block" name="submit" onClick="checkInCorrect();validate()" id="login" >登陆</button>
                     </div>
 
                     <div class="pad-all">
