--- a/test_manager.html
+++ b/test_manager.html
@@ -40,6 +40,7 @@
     <!--Bootstrap Datepicker [ OPTIONAL ]-->
     <link href="plugins/bootstrap-datepicker/bootstrap-datepicker.min.css" rel="stylesheet">
 
+
     <!--JAVASCRIPT-->
     <!--=================================================-->
 
@@ -70,7 +71,6 @@
     <!--Demo script [ DEMONSTRATION ]-->
     <script src="js/demo/nifty-demo.min.js"></script>
 
-
     <!--===================这个在下面==================-->
     <script src="js/atits_pc_js/test_manager.js"></script>
     <!--Bootstrap Datepicker [ OPTIONAL ]-->
@@ -89,37 +89,6 @@
 
 
     <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
-
-
-    <!--=================================================
-     <!--Form Component [ SAMPLE ]-->
-
-
-    <!--
-        REQUIRED
-        You must include this in your project.
-
-
-        RECOMMENDED
-        This category must be included but you may modify which plugins or components which should be included in your project.
-
-
-        OPTIONAL
-        Optional plugins. You may choose whether to include it in your project or not.
-
-
-        DEMONSTRATION
-        This is to be removed, used for demonstration purposes only. This category must not be included in your project.
-
-
-        SAMPLE
-        Some script samples which explain how to initialize plugins or components. This category should not be included in your project.
-
-
-        Detailed information and more samples can be found in the document.
-
-        =================================================-->
-
 
 </head>
 
@@ -488,7 +457,8 @@
             <div class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i></button>
+                        <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i>
+                        </button>
                     </div>
                     <div class="modal-body" style="text-align: center">
                         <h4 id="testStart1"></h4>
@@ -500,6 +470,57 @@
         </div>
         <!--===================================================-->
         <!--End Small Bootstrap Modal-->
+
+        <!--Large Bootstrap Modal-->
+        <!--===================================================-->
+        <div id="testWeight" class="modal fade" tabindex="-1">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i>
+                        </button>
+                        <h3 class="modal-title">权重设置</h3>
+                    </div>
+                    <div class="modal-body" style="text-align: center">
+                        <input type="hidden" name="id">
+                        体系办对首席打分权重：<br><input type="number" name="a" style="text-align: center"><br>
+                        副首席、研究室主任、实验站站长对首席打分权重：<br><input type="number" name="b" style="text-align: center"><br>
+                        外聘专家对首席打分权重：<br><input type="number"name="c" style="text-align: center"><br>
+                        <div></div>
+                        体系办、外聘专家对副首席打分权重：<br><input type="number"name="d" style="text-align: center"><br>
+                        首席对副首席打分权重：<br><input type="number"name="e" style="text-align: center"><br>
+                        研究室主任、实验站站长对副首席打分权重：<br><input type="number"name="f" style="text-align: center"><br>
+                        <br>
+                        <button id="testWeight_btn" class="btn btn-success">修改</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--===================================================-->
+        <!--End Large Bootstrap Modal-->
+
+        <!--Large Bootstrap Modal-->
+        <!--===================================================-->
+        <div id="testWeight2" class="modal fade" tabindex="-1">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i>
+                        </button>
+                        <h3 class="modal-title">权重设置</h3>
+                    </div>
+                    <div class="modal-body" style="text-align: center">
+                        <input name="id2" type="hidden">
+                        首席、副首席对研究室主任、实验站站长打分权重：<br><input type="number" name="g" style="text-align: center"><br>
+                        研究室主任、实验站站长对研究室主任、实验站站长打分权重：<br><input type="number" name="h" style="text-align: center"><br>
+                        <br>
+                        <button id="testWeight2_btn" class="btn btn-success">修改</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--===================================================-->
+        <!--End Large Bootstrap Modal-->
 
         <!--Large Bootstrap Modal-->
         <!--===================================================-->
@@ -542,6 +563,15 @@
                                     </label>
                                     <div class="col-sm-2">
                                         <input class="form-control input-sm" placeholder="" type="text" name="year">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label">
+                                        体系
+                                    </label>
+                                    <div class="col-sm-6">
+                                        <input class="form-control input-sm " type="text"
+                                               name="system" readonly>
                                     </div>
                                 </div>
                                 <div class="form-group">
