--- a/harvest.html
+++ b/harvest.html
@@ -112,9 +112,8 @@
     <!--Dropzone [ OPTIONAL ]-->
     <script src="plugins/dropzone/dropzone.min.js"></script>
 
-
-
     <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
+    <link id="theme" href="css/themes/type-a/theme-dark.min.css" rel="stylesheet">
 
     <!--=================================================
 
