--- a/report.html
+++ b/report.html
@@ -121,7 +121,7 @@
 
     <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
 
-
+    <link id="theme" href="css/themes/type-a/theme-dark.min.css" rel="stylesheet">
     <!--=================================================
 
     REQUIRED
