--- a/user.html
+++ b/user.html
@@ -91,6 +91,8 @@
     <script src="plugins/bootstrap-table/extensions/editable/bootstrap-table-editable.js"></script>
     <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
 
+    <link id="theme" href="css/themes/type-a/theme-dark.min.css" rel="stylesheet">
+
 </head>
 
 <!--TIPS-->
