--- a/login.html
+++ b/login.html
@@ -111,7 +111,7 @@
 
                     <div class="pad-all">
                         <a href="#" class="btn-link mar-rgt">忘记密码?</a>
-                        <a href="#" class="btn-link mar-lft">注册</a>
+                        <a href="to_register.html" class="btn-link mar-lft">注册</a>
 
                     </div>
                 </div>
